apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
@import 'apps/dashboard/src/variables';

.knowledge-box-home {
  --width-small-column: #{rhythm(47)};
  --gap-size: #{rhythm(3)};

  display: flex;
  gap: var(--gap-size);

  .small-container {
    flex: 0 1 auto;
    min-width: rhythm(35);
    max-width: var(--width-small-column);
  }
  .account-type-container {
    width: var(--width-small-column);
  }

  .fit-content {
    height: fit-content;
  }

  .column-container {
    display: flex;
    flex-direction: column;
    gap: var(--gap-size);

    &.wide-column {
      flex: 1 1 auto;
      min-width: var(--width-small-column);
      max-width: calc(var(--width-small-column) * 2 + var(--gap-size));
    }
  }
  .row-container {
    display: flex;
    gap: var(--gap-size);
    flex: 1 0 auto;

    .growing-container {
      flex: 1 1 auto;
      width: calc(100% / 2);
    }
  }

  .title-with-action {
    align-items: center;
    display: flex;
    justify-content: space-between;

    pa-button {
      margin-right: calc(-1 * #{rhythm(1)});
    }
  }

  .upload-data {
    display: flex;
    flex-direction: column;
    gap: rhythm(2);

    stf-desktop-sources {
      display: block;
      margin-bottom: rhythm(0.5);
    }
  }

  .desktop-container {
    display: flex;
    flex-direction: column;
    gap: rhythm(2);

    img {
      height: rhythm(4);
    }
    small {
      text-align: center;
    }
  }

  .kb-details {
    display: flex;
    flex-direction: column;
    gap: rhythm(1);

    .details-block {
      align-items: center;
      display: flex;
      gap: rhythm(0.5);
      margin-top: calc(-1 * #{rhythm(0.25)});

      pre {
        margin-bottom: 0;
        white-space: normal;
      }
    }
  }

  .kb-content {
    display: flex;
    flex-direction: column;
    gap: rhythm(4);

    .title-m {
      margin-bottom: rhythm(1);
    }

    .no-content {
      font-style: italic;
    }

    .latest-uploaded-list {
      list-style: none;
      margin: 0;
      padding: 0;

      li {
        background-color: $color-neutral-lightest;
        box-shadow: $box-shadow-border-bottom;
        cursor: pointer;
        line-height: rhythm(5);
        transition: background-color $transition-hint;

        &:hover {
          background-color: $color-neutral-lighter;
        }

        pa-icon {
          color: $color-neutral-regular;
          margin-right: rhythm(0.5);
        }
      }
    }
  }

  .usage-charts {
    .title-m {
      margin-bottom: rhythm(1);
    }

    .chart-container {
      display: flex;
      flex-direction: column;
      gap: rhythm(2);
    }

    pa-table ::ng-deep .pa-table-grid--cell {
      background-color: $color-neutral-lightest;
    }
  }
}

